5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1674_1107.log
== TEST (2019-05-01 15:45:30) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=(x+y)%7
if(dia>=0)and(dia<=6):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
	if(futuro==0):
		y="domingo"
	elif(futuro==1):
		y="segunda"
	elif(futuro==2):
		y="terca"
	elif(futuro==3):
		y="quarta"
	elif(futuro==4):
		y="quinta"
	elif(futuro==5):
		y="sexta"
	elif(fututo==6):
		y="sabado"
print("Hoje eh", x, "e o dia do futuro eh",y)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    futuro=(x+y)%7
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:46:27) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=(dia+diafu)%7
if(dia>=0)and(dia<=6):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
	if(futuro==0):
		y="domingo"
	elif(futuro==1):
		y="segunda"
	elif(futuro==2):
		y="terca"
	elif(futuro==3):
		y="quarta"
	elif(futuro==4):
		y="quinta"
	elif(futuro==5):
		y="sexta"
	elif(fututo==6):
		y="sabado"
print("Hoje eh", x, "e o dia do futuro eh",y)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 33, in <module>
    print("Hoje eh", x, "e o dia do futuro eh",y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:46:44) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=(dia+diafu)%7
if(dia>=0)and(dia<=6):
	if(dia==0):
		x="domingo"
	elif(dia==1):
		x="segunda"
	elif(dia==2):
		x="terca"
	elif(dia==3):
		x="quarta"
	elif(dia==4):
		x="quinta"
	elif(dia==5):
		x="sexta"
	elif(dia==6):
		x="sabado"
	if(futuro==0):
		y="domingo"
	elif(futuro==1):
		y="segunda"
	elif(futuro==2):
		y="terca"
	elif(futuro==3):
		y="quarta"
	elif(futuro==4):
		y="quinta"
	elif(futuro==5):
		y="sexta"
	elif(fututo==6):
		y="sabado"
print("Hoje eh", x, "e o dia do futuro eh",y)
		
-- EXECUTION TIME:
0.189002
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 33, in <module>
    print("Hoje eh", x, "e o dia do futuro eh",y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:53:46) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=((dia+diafu)%7)
if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(fututo==6):
			y="sabado"
print("Hoje eh", x, "e o dia do futuro eh",y)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 34, in <module>
    print("Hoje eh", x, "e o dia do futuro eh",y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:54:09) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=((dia+diafu)%7)
if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(fututo==6):
			y="sabado"
print("Hoje eh", x, "e o dia do futuro eh",y)
		
-- EXECUTION TIME:
0.1392
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 34, in <module>
    print("Hoje eh", x, "e o dia do futuro eh",y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:54:26) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=((dia+diafu)%7)
if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(fututo==6):
			y="sabado"
	print("Hoje eh", x, "e o dia do futuro eh",y)
		
-- EXECUTION TIME:
0.182962
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:

-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia do futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:54:37) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=((dia+diafu)%7)
if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(fututo==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh",y)
		
-- EXECUTION TIME:
0.140742
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:

-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia do futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:54:41) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=((dia+diafu)%7)
if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(fututo==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh",y)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 34, in <module>
    print("Hoje eh", x, "e o dia do futuro eh",y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:51:43) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=((dia+diafu)%7)
if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(fututo==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh",y)
else:
	print("A entrada", dia, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:52:20) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=((dia+diafu)%7)
if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(fututo==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh",y)
else:
	print("A entrada", dia, "eh invalida")
		
-- EXECUTION TIME:
0.194295
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia do futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:52:30) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=((dia+diafu)%7)
if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(fututo==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh",y)
else:
	print("A entrada", dia, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:55:17) 
-- CODE:
dia=int(input("dia de hoje: "))
diafu=int(input("dias futuros: "))
futuro=((dia+diafu)%7)
if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(fututo==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh",y)
	else:
		print("A entrada", dia, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
		
-- EXECUTION TIME:
0.209107
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia do futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:00:56) 
-- CODE:
dia = int(input("dia de hoje: "))
diafu = int(input("dias futuros: "))

futuro = (dia+diafu)%7

if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(fututo==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh",y)
	else:
		print("A entrada", dia, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
		
-- EXECUTION TIME:
0.195726
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia do futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:05:37) 
-- CODE:
dia = int(input("dia de hoje: "))
diafu = int(input("dias futuros: "))

futuro = (dia+diafu)%7

if( dia >= 0)and(dia < = 6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh",y)
	else:
		print("A entrada", dia, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
		
-- EXECUTION TIME:
0.188872
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 6
    if( dia >= 0)and(dia < = 6):
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:07:04) 
-- CODE:
dia = int(input("dia de hoje: "))
diafu = int(input("dias futuros: "))

futuro = (dia+diafu)%7

if( dia >= 0)and(dia < = 6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh",y)
	else:
		print("A entrada", diafu, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
		
-- EXECUTION TIME:
0.142863
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 6
    if( dia >= 0)and(dia < = 6):
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:08:27) 
-- CODE:
dia = int(input("dia de hoje: "))
diafu = int(input("dias futuros: "))

futuro = (dia+diafu)%7

if( dia >= 0)and(dia < = 6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh", y)
	else:
		print("A entrada", diafu, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
		
-- ERROR:
File "XXXX", line 6
    if( dia >= 0)and(dia < = 6):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:08:35) 
-- CODE:
dia = int(input("dia de hoje: "))
diafu = int(input("dias futuros: "))

futuro = (dia+diafu)%7

if( dia >= 0)and(dia < = 6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh", y)
	else:
		print("A entrada", diafu, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
		
-- ERROR:
File "XXXX", line 6
    if( dia >= 0)and(dia < = 6):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:09:17) 
-- CODE:
dia = int(input("dia de hoje: "))
diafu = int(input("dias futuros: "))

futuro = (dia+diafu)%7
if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", x, "e o dia do futuro eh", y)
	else:
		print("A entrada", diafu, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:10:02) 
-- CODE:
dia = int(input("dia de hoje: "))
diafu = int(input("dias futuros: "))

futuro = (dia+diafu)%7
if(dia>=0)and(dia<=6):
	if(diafu>0):
		if(dia==0):
			x="domingo"
		elif(dia==1):
			x="segunda"
		elif(dia==2):
			x="terca"
		elif(dia==3):
			x="quarta"
		elif(dia==4):
			x="quinta"
		elif(dia==5):
			x="sexta"
		elif(dia==6):
			x="sabado"
		if(futuro==0):
			y="domingo"
		elif(futuro==1):
			y="segunda"
		elif(futuro==2):
			y="terca"
		elif(futuro==3):
			y="quarta"
		elif(futuro==4):
			y="quinta"
		elif(futuro==5):
			y="sexta"
		elif(futuro==6):
			y="sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", diafu, "eh invalida")
else:
	print("A entrada", dia, "eh invalida")
	
		
-- EXECUTION TIME:
0.128245
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
